src/test/ui/resolve/token-error-correct.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/token-error-correct.rs:6:1
   |
LL |     foo(bar(;
   |            - unmatched opening delimiter begins here
LL |
LL | }
   | ^ mismatched closing delimiter

error: this file contains an unclosed delimiter
  --> $DIR/token-error-correct.rs:9:21
   |
LL | fn main() {
   |           - unclosed delimiter
LL |     foo(bar(;
   |        - unclosed delimiter
...
LL | fn foo(_: usize) {}
   |                     ^

error: this file contains an unclosed delimiter
  --> $DIR/token-error-correct.rs:9:21
   |
LL | fn main() {
   |           - unclosed delimiter
LL |     foo(bar(;
   |        - unclosed delimiter
...
LL | fn foo(_: usize) {}
   |                     ^

error: expected one of `)`, `,`, `.`, `?`, or an operator, found keyword `fn`
  --> $DIR/token-error-correct.rs:9:1
   |
LL | }
   |  - expected one of `)`, `,`, `.`, `?`, or an operator
...
LL | fn foo(_: usize) {}
   | ^^ unexpected token

error: aborting due to 4 previous errors

